--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,6 +26,7 @@ body {
 .header {
   border-bottom: 1px solid #e5e5e5;
   margin-bottom: 10px;
+  background-color: #0096c9;
 
   /* Make the masthead heading the same height as the navigation */
   h3 {
@@ -35,6 +36,48 @@ body {
     padding-bottom: 19px;
   }
 }
+
+  .navbar, .navbar-default{
+    border-color: #0096c9;
+    background-color: #0096c9;
+    border-radius: 0;
+    margin-bottom: 0;
+    border: 0;
+  }
+
+  .navbar-brand, .navbar-header{
+    height: 180px; 
+    width:100%;
+  }
+
+  .navbar-toggle{
+    position:absolute;
+    top:1px;
+    right:1px;
+  }
+
+  .image{
+    width:auto;
+    margin: auto;
+    height:100%;
+  }
+
+  .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #131F46;
+    background-color: #FFFFFF;
+}
+
+  .navbar-default .navbar-nav > li > a {
+    color: #131F46;
+  }
+
+  .navbar-default .navbar-toggle {
+    border-color: #131F46;
+  }
+
+  .navbar-default .navbar-toggle .icon-bar {
+    background-color: #131F46;
+  }
 
 /* Custom page footer */
 .footer {
@@ -84,6 +127,7 @@ body {
   .header {
     margin-bottom: 30px;
   }
+
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
