Add new fonts & links to social networks

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,12 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+@import "../fonts/_fontface.scss";
+
+#lnkAbout, #lnkContact{
+  display:none;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -12,6 +18,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 body {
   padding: 0;
+  font-family: HelveticaMed, "Helvetica Neue", Helvetica;
 }
 
 .container{
