Fix fonts not being added to dist folder due to folder structure

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,7 +3,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
-@import "../fonts/_fontface.scss";
+@import "_fontface.scss";
 
 #lnkAbout, #lnkContact{
   display:none;
