--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,13 @@
 <div class="row marketing col-md-6">
   <h4>The 9th Annual Didsbury Beer Festival</h4>
   <p>
-    Check back soon for more information
+    100+ Beers, Ciders &amp; Perries!<br>
+		With great food &amp; music<br>
+		St. Catherine's Social Club<br>
+    School Lane<br>
+    Didsbury<br>
+		Manchester<br>
+    M20 6HS<br>
   </p>
 
   <h4>Contact us</h4>
