--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -146,13 +146,30 @@ body {
     padding-left: 0;
     padding-right: 0;
   }
-  /* Space out the masthead */
+  /* Space out the masthead 
   .header {
     margin-bottom: 30px;
-  }
+  }*/
 
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+.mapImage{
+  width:90%;
+}
+
+.map{
+  padding: 5%;
+  text-align: center;
+}
+
+.fullBg {
+    margin: 0px;
+    margin-top: -1px;
+    width: 100%;
+    max-width: 100%;
+    background-color: #0096c9;
 }
