--- a/app/views/find.html
+++ b/app/views/find.html
@@ -1,4 +1,4 @@
 
 <div class="map col-md-12">
-  <img class="mapImage" src="images/2016map.png" />
+  <a href="http://maps.google.com/?q=53.416528,%20-2.222119"><img class="mapImage" src="images/2016map.png" /></a>
 </div>
