--- a/app/styles/_flipclock.scss
+++ b/app/styles/_flipclock.scss
@@ -183,7 +183,8 @@
   position: relative;
   width: 14px;
   height: 50px;
-  margin-left:-6px; }
+  margin-left:-6px;
+  margin-right:-1px; }
 
 .flip-clock-divider:first-child {
   width: 0; }
@@ -191,12 +192,12 @@
 .flip-clock-dot {
   display: block;
   background: #323434;
-  width: 10px;
-  height: 10px;
+  width: 6px;
+  height: 6px;
   position: absolute;
   border-radius: 50%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  left: 5px; }
+  left: 7px; }
 
 .flip-clock-divider .flip-clock-label {
   position: absolute;
