--- a/app/styles/_flipclock.scss
+++ b/app/styles/_flipclock.scss
@@ -39,15 +39,14 @@
 
 .flip-clock-meridium {
   background: none !important;
-  box-shadow: 0 0 0 !important;
-  font-size: 36px !important; }
+  box-shadow: 0 0 0 !important; }
 
 .flip-clock-meridium a { color: #313333; }
 
 .flip-clock-wrapper {
   text-align: center;
   position: relative;
-  width: 100%;
+  width: 108%;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -67,13 +66,12 @@
   float: left;
   margin: 1px;
   height: 50px;
-  font-size: 40px;
   font-weight: bold;
   border-radius: 6px;
   background: #000;
   list-style: none; 
-  line-height: 50px; 
-  width: 37px;
+  line-height: 50px;
+  font-size: 22px;
 }
 
 .flip-clock-wrapper ul li {
@@ -106,7 +104,6 @@
   left: 0;
   width: 100%;
   height: 50%;
-  font-size: 40px;
   overflow: hidden; 
   outline: 1px solid transparent; }
 
@@ -156,8 +153,7 @@
   text-shadow: 0 1px 2px #000;
   text-align: center;
   background-color: #333;
-  border-radius: 6px;
-  font-size: 40px; }
+  border-radius: 6px; }
 
 .flip-clock-wrapper ul li a div.up div.inn {
   top: 0; }
@@ -183,7 +179,7 @@
   position: relative;
   width: 14px;
   height: 50px;
-  margin-left:-6px;
+  margin-left:-7px;
   margin-right:-1px; }
 
 .flip-clock-divider:first-child {
