--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,7 +24,7 @@
         <a href="https://plus.google.com/111188242650217473870" rel="publisher">Google+</a><br>
   </p>
 </div>
-<div class="row marketing col-md-6">
+<div class="row marketing col-md-6 rowCountdown">
   <h3>Countdown to DBF 2016:</h3>
 <div class="clock"></div>
 <script type="text/javascript">
