Fix twitter widget loading inside partial view with ngtweet bower package

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,5 +27,7 @@
 <div class="row marketing col-md-6 rowCountdown">
   <h3>Countdown to DBF 2016:</h3>
 <div class="clock"></div>
-<a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<twitter-widget>
+  <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
+</twitter-widget>
 </div>
