--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -180,19 +180,19 @@ body {
   width:90%;
 }
 
-.map{
-  padding: 5%;
-  text-align: center;
-}
 
 .fullBg {
     margin: 0px;
     margin-top: -1px;
     width: 100%;
     max-width: 100%;
-    background-color: #0096c9;
 }
 
 p{
   font-size: 16px;
 }
+
+.angular-google-map-container { 
+  height: 400px;
+  width:100%; 
+  }
