New background colour. Some design changes to main page. Two new sponsors

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,6 +21,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body {
   padding: 0;
   font-family: HelveticaMed, "Helvetica Neue", Helvetica;
+  background-color: #f3f3f3;
 }
 
 .container{
@@ -126,6 +127,7 @@ body {
   padding-top: 12px;
   color: #777;
   border-top: 1px solid #e5e5e5;
+  background-color: #f9f8f7;
 }
 
 .container-narrow > hr {
