--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,19 +1,12 @@
-<div class="row marketing col-md-6">
-  <h4>The 9th Annual Didsbury Beer Festival</h4>
+<div class="row marketing col-md-6 rowCountdown">
+  <h3>The 9th Annual Didsbury Beer Festival</h3>
   <p>
-    100+ Beers, Ciders &amp; Perries!<br>
-		With great food &amp; music<br>
-		St. Catherine's Social Club<br>
-    School Lane<br>
-    Didsbury<br>
-		Manchester<br>
-    M20 6HS<br>
+    100+ Beers, Ciders &amp; Perries,
+		with great food &amp; music<br><br>
   </p>
 
-  <h4>Contact us</h4>
-  <p>
-    For all general enquiries, please email info@didsburybeerfestival.org.uk
-  </p>
+  <div class="clock"></div>
+  
   <h4>Check out our social offerings</h4>
   <p>
        <a href="https://twitter.com/dbf_beer">Twitter</a><br>
@@ -23,11 +16,14 @@
         <a href="http://didsburybeer.blogspot.co.uk/">Blogspot</a><br>
         <a href="https://plus.google.com/111188242650217473870" rel="publisher">Google+</a><br>
   </p>
+  <h4>Contact us</h4>
+  <p>
+    For all general enquiries, please email info@didsburybeerfestival.org.uk
+  </p>
 </div>
-<div class="row marketing col-md-6 rowCountdown">
-  <h3>Countdown to DBF 2016:</h3>
-<div class="clock"></div>
+<div class="row marketing col-md-6">
+  <br>
 <twitter-widget>
-  <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
+  <a class="twitter-timeline" data-lang="en" data-height="450" data-theme="light" href="https://twitter.com/dbf_beer"></a>
 </twitter-widget>
 </div>
