Add open in google maps to find us page

--- a/app/views/find.html
+++ b/app/views/find.html
@@ -2,6 +2,6 @@
 <div class="map">
   <a style="display:none;" href="http://maps.google.com/?q=53.416528,%20-2.222119"><img class="mapImage" src="images/2016map.png" /></a>
 <ui-gmap-google-map center='map.center' zoom='map.zoom'>
-  <ui-gmap-marker coords="marker.coords" options="marker.options" idkey="marker.id"></ui-gmap-marker>
+  <ui-gmap-marker coords="marker.coords" options="marker.options" idkey="marker.id" click="openMap()"></ui-gmap-marker>
 </ui-gmap-google-map>
 </div>
