Changed font to roboto condensed

--- a/app/styles/_flipclock.scss
+++ b/app/styles/_flipclock.scss
@@ -34,7 +34,7 @@
 
 /* Main */
 .flip-clock-wrapper {
-  font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
+  font: normal 11px "Roboto Condensed","Helvetica Neue", Helvetica, sans-serif;
   -webkit-user-select: none; }
 
 .flip-clock-meridium {
@@ -153,7 +153,7 @@
   text-shadow: 0 1px 2px #000;
   text-align: center;
   background-color: #333;
-  border-radius: 6px; }
+  border-radius: 3px; }
 
 .flip-clock-wrapper ul li a div.up div.inn {
   top: 0; }
