--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,7 +20,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 body {
   padding: 0;
-  font-family: HelveticaMed, "Helvetica Neue", Helvetica;
+  font-family: "Roboto Condensed", HelveticaMed, "Helvetica Neue", Helvetica;
   background-color: #f3f3f3;
 }
 
@@ -212,4 +212,10 @@ p{
 
   .youtubePopup:focus{
     outline: 0;
+  }
+
+  .clockContainer{
+    margin-left: auto;
+    margin-right: auto;
+    width: 355px;
   }
