--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,22 @@
 <div class="row marketing col-md-6 rowCountdown">
+  <br>
+  <div>
   <h4>The 9th Annual Didsbury Beer Festival</h4>
   <p>
     100+ Beers, Ciders &amp; Perries,
-		with great food &amp; music<br><br>
+		with great food &amp; music
   </p>
+  <br>
 
-  <div class="clock"></div>
-  
+  <div class="clockContainer">
+    <div class="clock"></div>
+  </div>
+  <p style="font-style:italic; text-align:center; font-size:14px;">until Didsbury's Premier Social Event</p>
+  </div>
+  <h4>Contact us</h4>
+  <p>
+    For all general enquiries, please email info@didsburybeerfestival.org.uk
+  </p>
   <h4>Check out our social offerings</h4>
   <p>
        <a href="https://twitter.com/dbf_beer">Twitter</a><br>
@@ -15,10 +25,6 @@
         <a href="http://www.youtube.com/user/Didsburybeerfestival">YouTube</a><br>
         <a href="http://didsburybeer.blogspot.co.uk/">Blogspot</a><br>
         <a href="https://plus.google.com/111188242650217473870" rel="publisher">Google+</a><br>
-  </p>
-  <h4>Contact us</h4>
-  <p>
-    For all general enquiries, please email info@didsburybeerfestival.org.uk
   </p>
 </div>
 <div class="row marketing col-md-6">
