--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,18 @@
 <div class="row marketing col-md-6 rowCountdown">
-  <br>
   <div>
-  <h4>The 9th Annual Didsbury Beer Festival</h4>
+  <h3>The 9th Annual Didsbury Beer Festival</h3>
+  <h4 style="text-align:center">27th, 28th & 29th October 2016</h4>
+  <br>
   <p>
     100+ Beers, Ciders &amp; Perries,
 		with great food &amp; music
+  </p>
+  <p>
+    St Catherine's Social club<br>
+    School Lane<br>
+    Didsbury<br>
+    Manchester<br>
+    M20 6HS
   </p>
   <br>
 
@@ -13,23 +21,24 @@
   </div>
   <p style="font-style:italic; text-align:center; font-size:14px;">until Didsbury's Premier Social Event</p>
   </div>
+  <br>
   <h4>Contact us</h4>
   <p>
     For all general enquiries, please email info@didsburybeerfestival.org.uk
   </p>
-  <h4>Check out our social offerings</h4>
-  <p>
-       <a href="https://twitter.com/dbf_beer">Twitter</a><br>
-        <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"">Facebook</a><br>
-        <a href="http://www.flickr.com/photos/65526946@N08/">Flickr</a><br>
-        <a href="http://www.youtube.com/user/Didsburybeerfestival">YouTube</a><br>
-        <a href="http://didsburybeer.blogspot.co.uk/">Blogspot</a><br>
-        <a href="https://plus.google.com/111188242650217473870" rel="publisher">Google+</a><br>
-  </p>
 </div>
-<div class="row marketing col-md-6">
-  <br>
+<div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
 <twitter-widget>
-  <a class="twitter-timeline" data-lang="en" data-height="450" data-theme="light" href="https://twitter.com/dbf_beer"></a>
+  <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
 </twitter-widget>
+<br>
+<h4>Check out our social offerings</h4>
+  <p style="font-size:30px"> 
+    <a href="https://twitter.com/dbf_beer"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+    <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i id="jv-facebook_alt" class="jv-facebook_alt"></i></a>
+    <a href="http://www.flickr.com/photos/65526946@N08/"><i id="jv-flickr" class="jv-flickr"></i></a>
+    <a href="http://www.youtube.com/user/Didsburybeerfestival"><i id="jv-youtube" class="jv-youtube"></i></a>
+    <a href="http://didsburybeer.blogspot.co.uk/"><i id="jv-blogger" class="jv-blogger"></i></a>
+    <a href="https://plus.google.com/111188242650217473870" rel="publisher"><i id="jv-google" class="jv-google"></i>+</a>
+  </p>
 </div>
