--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,11 @@
 <div class="row marketing col-md-6 rowCountdown">
-  <div>
-  <h3>The 9th Annual Didsbury Beer Festival</h3>
-  <h4 style="text-align:center">27th, 28th & 29th October 2016</h4>
+  <div style="text-align: center;">
+  <h4>The 9th Annual</h4>
+  <h3 style="margin-top:0;">Didsbury Beer Festival</h3>
+  <h4>27th, 28th & 29th October 2016</h4>
   <br>
+  </div>
+  <div>
   <p>
     100+ Beers, Ciders &amp; Perries,
 		with great food &amp; music
@@ -15,7 +18,6 @@
     M20 6HS
   </p>
   <br>
-
   <div class="clockContainer">
     <div class="clock"></div>
   </div>
@@ -24,15 +26,14 @@
   <br>
   <h4>Contact us</h4>
   <p>
-    For all general enquiries, please email info@didsburybeerfestival.org.uk
+    For all general enquiries, please email <a href="mailto:info@didsburybeerfestival.org.uk">info@didsburybeerfestival.org.uk</a>
   </p>
 </div>
 <div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
 <twitter-widget>
   <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
 </twitter-widget>
-<br>
-<h4>Check out our social offerings</h4>
+<h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><span class="glyphicon glyphicon-play-circle"></span></a> to watch our video, or check out our social offerings</h4>
   <p style="font-size:30px"> 
     <a href="https://twitter.com/dbf_beer"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
     <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i id="jv-facebook_alt" class="jv-facebook_alt"></i></a>
