Add zoom to flipclock for display on smaller devices

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -130,6 +130,10 @@ body {
     border-color: #131F46;
   }
 
+  .navbar-nav{
+    text-align:center;
+  }
+
   .navbar-default .navbar-toggle .icon-bar {
     background-color: #131F46;
   }
@@ -219,4 +223,5 @@ p{
     margin-left: auto;
     margin-right: auto;
     width: 355px;
+    zoom:78%;
   }
