--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -1,4 +1,4 @@
-<div class="row col-md-6 rowPadding">
+<div class="col-md-6 rowPadding">
   <div style="text-align: center;">
     <img id="beerImg" src="images/vipbeer_alt.png" />
     <h4>Normal Entry - £5</h4>
@@ -8,7 +8,7 @@
 <span>Friday 28th</span><span class="pull-right">6-11PM</span><br>
 <span>Saturday 29th</span><span class="pull-right">12-11PM</span><br>
 </div>
-<div class="row col-md-6 rowPadding">
+<div class="col-md-6 rowPadding">
   <div style="text-align: center;">
     <img id="ticketImg" src="images/vipticket_alt.png" />
     <h4>Friends Ticket - £15</h4>
