add good causes page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -246,3 +246,11 @@ p{
     width: 25%;
     margin:auto;
   }
+
+  .goodCauseImg{
+    width: 100%;
+  }
+
+  .lnkGoodCause, .lnkGoodCause :hover, .lnkGoodCause :focus{
+    color: #333333;
+  }
