--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -3,7 +3,7 @@
     <img id="beerImg" src="images/vipbeer_alt.png" />
     <h4>Normal Entry - £5</h4>
   </div>
-  <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door</p>
+  <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door.</p>
 <span>Thursday 27th</span><span class="pull-right">7-11PM</span><br>
 <span>Friday 28th</span><span class="pull-right">6-11PM</span><br>
 <span>Saturday 29th</span><span class="pull-right">12-11PM</span><br>
@@ -12,7 +12,7 @@
   <div style="text-align: center;">
     <img id="ticketImg" src="images/vipticket_alt.png" />
     <h4>Friends Ticket - £15</h4>
-    <p>This ticket covers entrance to all nights, a free glass and guaranteed entry with queue jumping rights!</p>
+    <p>This ticket covers all three nights, with a glass and guaranteed entry with queue jumping rights!</p>
     <span>Check back soon for more info</span>
   </div>
 </div>
