add email to tickets page

--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -13,6 +13,7 @@
     <img id="ticketImg" src="images/vipticket_alt.png" />
     <h4>Friends Ticket - £15</h4>
     <p>This ticket covers all three nights, with a glass and guaranteed entry with queue jumping rights!</p>
-    <span>Check back soon for more info</span>
+    <p>To be purchased in advance - <a title="Or email tessa.connolly@tiscali.co.uk" 	href="mailto:tessa.connolly@tiscali.co.uk?subject=Friends of DBF ticket request">click here</a>
+						Or email tessa.connolly@tiscali.co.uk</p>
   </div>
 </div>
