--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,9 +18,24 @@
     M20 6HS
   </p>
   <br>
-  <div class="clockContainer">
-    <div class="clock"></div>
+  <div id="clockdiv">
+  <div>
+    <span class="days"></span>
+    <div class="smalltext">Days</div>
   </div>
+  <div>
+    <span class="hours"></span>
+    <div class="smalltext">Hours</div>
+  </div>
+  <div>
+    <span class="minutes"></span>
+    <div class="smalltext">Minutes</div>
+  </div>
+  <div>
+    <span class="seconds"></span>
+    <div class="smalltext">Seconds</div>
+  </div>
+</div>
   <p style="font-style:italic; text-align:center; font-size:14px;">until Didsbury's Premier Social Event</p>
   </div>
   <br>
