Add email address to volunteer page

--- a/app/views/volunteer.html
+++ b/app/views/volunteer.html
@@ -1,17 +1,20 @@
 <div class="row marketing col-md-12">
   <h2>We need you.......</h2>
   <p>The Didsbury Beer Festival is managed and staffed entirely by volunteers and we are now looking for staff for this year.
-  Volunteering at the festival is always great fun and many come back year after year, but we’re always looking for more.<br><br>
-  So if you can spare anything from a couple of hours to a full weekend, we’d love to have you join us. The work can be hard but it is rewarding and obviously there are a few perks!<br><br></p>
+  Volunteering at the festival is always great fun and many come back year after year, but we’re always looking for more.</p>
+  <p>So if you can spare anything from a couple of hours to a full weekend, we’d love to have you join us. The work can be hard but it is rewarding and obviously there are a few perks!</p>
+  <p>
   <ul>
-  <li><p>You will be given refreshments, full training and support plus breaks whenever you need them.<br><br></p></li>
-  <li><p>If you are a student and working towards Employability Awards we can provide a certificate of volunteering.<br><br></p></li>
+  <li><p>You will be given refreshments, full training and support plus breaks whenever you need them.<br></p></li>
+  <li><p>If you are a student and working towards Employability Awards we can provide a certificate of volunteering.<br></p></li>
   <li><p>Every volunteer gets a ‘limited edition’ festival t’shirt and glass to keep and an invite to our Festival Celebration party in January.</p></li>
   </ul>
-  <p><br>
+  </p>
+  <p>
   If we reach the required numbers of staff needed on certain shifts these will be removed from the form and no longer available to book.
   So if you’ve selected the shifts you want and submitted the form ....YOU’RE IN!!</p>
 </div>
 <div class="row marketing col-md-12">
   <p>Interested? <br><a href="https://docs.google.com/forms/d/1vkYD3_kposY61MoGgR3gu4XGcTLD71WzHwCqEgYQdGU/viewform">CLICK HERE</a> Please complete and submit the online Volunteer Registration Form and remember to make a note of your shifts as we are unable to contact everyone individually to confirm.</p>
+  <p>For all other volunteering queries, don't hesitate to email us at <a href="mailto:dbfvolunteer@outlook.com">dbfvolunteer@outlook.com</a></p>
 </div>
