Remove volunteer form link

--- a/app/views/volunteer.html
+++ b/app/views/volunteer.html
@@ -15,6 +15,8 @@
   So if you’ve selected the shifts you want and submitted the form ....YOU’RE IN!!</p>
 </div>
 <div class="row marketing col-md-12">
-  <p>Interested? <br><a href="https://docs.google.com/forms/d/1vkYD3_kposY61MoGgR3gu4XGcTLD71WzHwCqEgYQdGU/viewform">CLICK HERE</a> Please complete and submit the online Volunteer Registration Form and remember to make a note of your shifts as we are unable to contact everyone individually to confirm.</p>
+  <p style="text-decoration: line-through;">Interested? <br>
+  CLICK HERE Please complete and submit the online Volunteer Registration Form and remember to make a note of your shifts as we are unable to contact everyone individually to confirm.</p>
+  <p style="font-weight:bold;">Thanks for your interest - all volunteering shifts have now been filled.<br>Many thanks to those who have already responded.</p>
   <p>For all other volunteering queries, don't hesitate to email us at <a href="mailto:dbfvolunteer@outlook.com">dbfvolunteer@outlook.com</a></p>
 </div>
