Add cash only description on tickets page

--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -3,10 +3,11 @@
     <img id="beerImg" src="images/vipbeer_alt.png" />
     <h4>Normal Entry - £5</h4>
   </div>
-  <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door.</p>
+  <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door.</p><br>
 <span>Thursday 27th</span><span class="pull-right">7-11PM</span><br>
 <span>Friday 28th</span><span class="pull-right">6-11PM</span><br>
-<span>Saturday 29th</span><span class="pull-right">12-11PM</span><br>
+<span>Saturday 29th</span><span class="pull-right">12-11PM</span><br><br>
+<p style="font-style:italic;">DBF is a cash only event.<br>A cash point can be found outside <a href="https://www.google.co.uk/maps/place/NatWest/@53.4173229,-2.2312877,15z/data=!4m5!3m4!1s0x0:0xc20131248de437f7!8m2!3d53.4173229!4d-2.2312877">Natwest</a> in Didsbury village.</p>
 </div>
 <div class="col-md-6 rowPadding">
   <div style="text-align: center;">
