Fix issue with social buttons in nav causing height increase when hidden

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -277,9 +277,9 @@ p{
     text-align:center;
   }
 
-  .navSocial > p > a{
-  display:none !important;
-}
+  .navSocial{
+    display:none !important;
+  }
 }
 
 .navSocial > p > a{
