--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,42 +1,41 @@
 <div class="row marketing col-md-6 rowCountdown">
-  <div style="text-align: center;">
-  <h4>The 9th Annual</h4>
-  <h3 style="margin-top:0;">Didsbury Beer Festival</h3>
-  <h4>27th, 28th & 29th October 2016</h4>
-  <br>
+  <div style="text-align: center">
+    <h3>Welcome to the website for the 9th annual Didsbury Beer Festival, taking place on
+      <br>
+      <br>
+      <span style="font-weight:bold;">27th, 28th &amp; 29th October 2016</span>
+    </h3> 
+    <br>
   </div>
   <div>
-  <p>
-    100+ Beers, Ciders &amp; Perries,
-		with great food &amp; music
-  </p>
-  <p>
-    St Catherine's Social club<br>
-    School Lane<br>
-    Didsbury<br>
-    Manchester<br>
-    M20 6HS
-  </p>
-  <br>
-  <div id="clockdiv">
-  <div>
-    <span class="days"></span>
-    <div class="smalltext">Days</div>
-  </div>
-  <div>
-    <span class="hours"></span>
-    <div class="smalltext">Hours</div>
-  </div>
-  <div>
-    <span class="minutes"></span>
-    <div class="smalltext">Minutes</div>
-  </div>
-  <div>
-    <span class="seconds"></span>
-    <div class="smalltext">Seconds</div>
-  </div>
-</div>
-  <p style="font-style:italic; text-align:center; font-size:14px;">until Didsbury's Premier Social Event</p>
+    <p>
+      100+ Beers, Ciders &amp; Perries, with great food &amp; music
+    </p>
+    <p>
+      St Catherine's Social club<br> School Lane<br> Didsbury
+      <br> Manchester
+      <br> M20 6HS
+    </p>
+    <br>
+    <div id="clockdiv">
+      <div>
+        <span class="days"></span>
+        <div class="smalltext">Days</div>
+      </div>
+      <div>
+        <span class="hours"></span>
+        <div class="smalltext">Hours</div>
+      </div>
+      <div>
+        <span class="minutes"></span>
+        <div class="smalltext">Minutes</div>
+      </div>
+      <div>
+        <span class="seconds"></span>
+        <div class="smalltext">Seconds</div>
+      </div>
+    </div>
+    <p style="font-style:italic; text-align:center; font-size:14px;">until Didsbury's Premier Social Event</p>
   </div>
   <br>
   <h4>Contact us</h4>
@@ -45,11 +44,11 @@
   </p>
 </div>
 <div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
-<twitter-widget>
-  <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
-</twitter-widget>
-<h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><span class="glyphicon glyphicon-play-circle"></span></a> to watch our video, or check out our social offerings</h4>
-  <p style="font-size:30px"> 
+  <twitter-widget>
+    <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
+  </twitter-widget>
+  <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><span class="glyphicon glyphicon-play-circle"></span></a>    to watch our video, or check out our social offerings</h4>
+  <p style="font-size:30px">
     <a href="https://twitter.com/dbf_beer"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
     <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i id="jv-facebook_alt" class="jv-facebook_alt"></i></a>
     <a href="http://www.flickr.com/photos/65526946@N08/"><i id="jv-flickr" class="jv-flickr"></i></a>
