Add missing sponsors. Add sorting functionality to beer and cider pages, along with type and minor styling changes

--- a/app/styles/_bxSlider.scss
+++ b/app/styles/_bxSlider.scss
@@ -15,9 +15,12 @@
 }
 
 #slider img { 
-	width:200px;
+	max-width:200px;
 	margin:auto;
-	display:inline-block  
+	display:inline-block;  
+	max-height:150px;
+	margin-top:auto;
+	margin-bottom:auto;
 }
 
 #slider li {
