--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -287,6 +287,20 @@ p{
     padding-bottom:5px;
   }
 
+  .dropdown-menu {
+    -webkit-transition: all .5s ease-out;
+    transition: all .5s ease-out;
+    transform: rotateX(90deg);
+    transform-origin: top;
+    opacity: 0;
+    display: block;
+  }
+  .open .dropdown-menu {
+      opacity: 1;
+      transform: rotateX(0deg);
+      transform-origin: top;
+  }
+
 @media (min-width: 768px){
     .navbar .nav,
   .navbar .nav > li {
@@ -342,4 +356,9 @@ p{
     background: none;
     color: #131F46;
   }
+
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #131F46;
+    background-color: #337ab7;
+  } 
 }
