Change address text to be centred

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
     <p>
       100+ Beers, Ciders &amp; Perries, with great food &amp; music
     </p>
-    <p>
+    <p style="text-align: center">
       St Catherine's Social club<br> School Lane<br> Didsbury
       <br> Manchester
       <br> M20 6HS
