Hide countdown clock

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,7 +17,7 @@
       <br> M20 6HS
     </p>
     <br>
-    <div id="clockdiv">
+    <div id="clockdiv" style="display:none;">
       <div>
         <span class="days"></span>
         <div class="smalltext">Days</div>
