Remove countdown tagline

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -35,7 +35,7 @@
         <div class="smalltext">Seconds</div>
       </div>
     </div>
-    <p style="font-style:italic; text-align:center; font-size:14px;">until Didsbury's Premier Social Event</p>
+    <p style="font-style:italic; text-align:center; font-size:14px; display:none;">until Didsbury's Premier Social Event</p>
   </div>
   <br>
   <h4>Contact us</h4>
