--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,22 +1,11 @@
+<p style="font-style:italic; padding:10px">Coming soon... check back later for updates, or visit us on Twitter or Facebook</p>
 <div class="row marketing col-md-6 rowCountdown">
     <div style="text-align: center">
-        <p>Coming soon... check back later for updates, or visit us on Twitter or Facebook</p>
         <h3>The 10th annual Didsbury Beer Festival will take place on
             <br>
             <br>
             <span style="font-weight:bold;">26th, 27th &amp; 28th October 2017</span>
         </h3>
-        <br>
-    </div>
-    <div>
-        <p>
-            100+ Beers, Ciders &amp; Perries, with great food &amp; music
-        </p>
-        <p style="text-align: center">
-            St Catherine's Social club<br> School Lane<br> Didsbury
-            <br> Manchester
-            <br> M20 6HS
-        </p>
         <br>
         <div id="clockdiv">
             <div>
@@ -37,17 +26,29 @@
             </div>
         </div>
         <p style="font-style:italic; text-align:center; font-size:14px;">until Didsbury's Premier Social Event</p>
+        <twitter-widget>
+            <a class="twitter-timeline" data-lang="en" data-height="250" data-theme="light" href="https://twitter.com/dbf_beer"></a>
+        </twitter-widget>
+    </div>
+</div>
+<div class="row marketing col-md-6" style="padding:10px; padding-left:20px; text-align: center;">
+    <p>Would you like to sponsor the glasses this year? <br><a href="glasssponsors.pdf">Click here</a> for more information</p>
+    <div>
+        <br>
+        <p>
+            100+ Beers, Ciders &amp; Perries, with great food &amp; music
+        </p>
+        <p style="text-align: center">
+            St Catherine's Social club<br> School Lane<br> Didsbury
+            <br> Manchester
+            <br> M20 6HS
+        </p>
     </div>
     <br>
     <h4>Contact us</h4>
     <p>
         For all general enquiries, please email <a href="mailto:info@didsburybeerfestival.org.uk">info@didsburybeerfestival.org.uk</a>
     </p>
-</div>
-<div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
-    <twitter-widget>
-        <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
-    </twitter-widget>
     <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><span class="glyphicon glyphicon-play-circle"></span></a> to watch our video, or check out our social offerings</h4>
     <p style="font-size:30px">
         <a href="https://twitter.com/dbf_beer"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
