fix pdf anchor tag

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 <div class="row marketing col-md-6" style="padding:10px; padding-left:20px; text-align: center;">
-    <p>Would you like to sponsor the glasses this year? <br><a href="glasssponsors.pdf">Click here</a> for more information</p>
+    <p>Would you like to sponsor the glasses this year? <br><a ng-href="pdf/glasssponsors.pdf">Click here</a> for more information</p>
     <div>
         <br>
         <p>
